--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,5 +25,14 @@
         <item name="android:windowIsTranslucent">true</item>
     </style>
 
-    <style name="Theme.AllOfTV" parent="AppTheme" />
+    <style name="Theme.AllOfTV" parent="AppTheme">
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:keepScreenOn">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
 </resources>
