--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/llRoot"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -141,7 +142,7 @@
                     android:textColor="@color/color_FFFFFF_80"
                     android:textSize="@dimen/ts_18" />
 
-            <Space
+            <View
                     android:layout_width="wrap_content"
                     android:layout_height="0mm"
                     android:layout_weight="1" />
@@ -152,7 +153,7 @@
                     android:orientation="horizontal">
 
                 <TextView
-                        android:id="@+id/tvPlay"
+                        android:id="@+id/tvFullScreen"
                         android:layout_width="@dimen/vs_120"
                         android:layout_height="@dimen/vs_40"
                         android:layout_marginEnd="@dimen/vs_10"
@@ -202,7 +203,7 @@
                         android:textSize="@dimen/vs_20" />
 
                 <ImageView
-                        android:id="@+id/tvPlayUrl"
+                        android:id="@+id/ivPlayUrl"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
