--- a/app/src/main/res/drawable/button_detail_all.xml
+++ b/app/src/main/res/drawable/button_detail_all.xml
@@ -2,25 +2,25 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_focused="true" android:state_pressed="true">
         <shape>
-            <corners android:radius="@dimen/vs_20" />
-            <solid android:color="?attr/color_theme_40" />
+            <corners android:radius="@dimen/vs_2" />
+            <solid android:color="@color/colorAccent" />
         </shape>
     </item>
     <item android:state_focused="false" android:state_pressed="true">
         <shape>
-            <corners android:radius="@dimen/vs_20" />
+            <corners android:radius="@dimen/vs_2" />
             <solid android:color="@android:color/transparent" />
         </shape>
     </item>
     <item android:state_focused="true">
         <shape>
-            <corners android:radius="@dimen/vs_20" />
-            <solid android:color="?attr/color_theme_40" />
+            <corners android:radius="@dimen/vs_2" />
+            <solid android:color="@color/colorAccent" />
         </shape>
     </item>
     <item android:state_focused="false" android:state_pressed="false">
         <shape>
-            <corners android:radius="@dimen/vs_20" />
+            <corners android:radius="@dimen/vs_2" />
             <solid android:color="@color/color_3D3D3D_50" />
         </shape>
     </item>
