--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -13,18 +13,22 @@
         <attr name="color_theme_dark_70" format="color|reference" />
     </declare-styleable>
 
+    <declare-styleable name="FocusIndicatorTextView">
+        <attr name="android:text" format="string|reference" />
+    </declare-styleable>
+
     <declare-styleable name="BaseVideoView">
-        <attr name="looping" format="boolean"/>
-        <attr name="enableAudioFocus" format="boolean"/>
+        <attr name="looping" format="boolean" />
+        <attr name="enableAudioFocus" format="boolean" />
         <attr name="screenScaleType" format="dimension">
-            <enum name="type_default" value="0"/>
-            <enum name="type_16_9" value="1"/>
-            <enum name="type_4_3" value="2"/>
-            <enum name="type_match_parent" value="3"/>
-            <enum name="type_original" value="4"/>
-            <enum name="type_center_crop" value="5"/>
+            <enum name="type_default" value="0" />
+            <enum name="type_16_9" value="1" />
+            <enum name="type_4_3" value="2" />
+            <enum name="type_match_parent" value="3" />
+            <enum name="type_original" value="4" />
+            <enum name="type_center_crop" value="5" />
         </attr>
-        <attr name="playerBackgroundColor" format="color"/>
+        <attr name="playerBackgroundColor" format="color" />
     </declare-styleable>
 
     <declare-styleable name="lbBaseGridView">
