播放进度实时获取

--- a/player/src/main/res/layout/widget_tv_player.xml
+++ b/player/src/main/res/layout/widget_tv_player.xml
@@ -14,7 +14,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_controller"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/black44">
 
         <LinearLayout
                 android:layout_width="match_parent"
