--- a/player/src/main/res/layout/widget_tv_player.xml
+++ b/player/src/main/res/layout/widget_tv_player.xml
@@ -14,8 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_controller"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/black44">
+            android:layout_height="match_parent">
 
         <LinearLayout
                 android:layout_width="match_parent"
