--- a/player/src/main/res/layout/widget_tv_player.xml
+++ b/player/src/main/res/layout/widget_tv_player.xml
@@ -33,7 +33,7 @@
                     tools:text="这里是标题"
                     android:maxLines="1"
                     android:ellipsize="end"
-                    android:textSize="14sp"
+                    android:textSize="18sp"
                     android:layout_weight="1" />
 
             <TextClock
@@ -43,7 +43,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:textColor="@color/white"
-                    android:textSize="14sp"
+                    android:textSize="18sp"
                     android:layout_marginStart="8dp"
                     android:format12Hour="HH:mm:ss"
                     android:format24Hour="HH:mm:ss"
@@ -52,8 +52,8 @@
 
         <ImageView
                 android:id="@+id/iv_play_or_pause"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -71,17 +71,42 @@
                 android:indeterminate="false"
                 android:indeterminateTint="@color/progressAccent" />
 
-        <com.yhy.player.widget.SilenceTimeBar
-                android:id="@+id/stb_drag"
+        <LinearLayout
+                android:id="@+id/ll_drag"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:played_color="@color/progressAccent"
-                app:unplayed_color="@color/progressBg"
-                app:buffered_color="@color/white"
-                app:scrubber_disabled_size="0dp" />
+                android:paddingHorizontal="4dp"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+            <TextView
+                    android:id="@+id/tv_position"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
+
+            <com.yhy.player.widget.SilenceTimeBar
+                    android:id="@+id/stb_drag"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginHorizontal="4dp"
+                    app:played_color="@color/progressAccent"
+                    app:unplayed_color="@color/progressBg"
+                    app:buffered_color="@color/white"
+                    app:scrubber_disabled_size="0dp" />
+
+            <TextView
+                    android:id="@+id/tv_duration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
+        </LinearLayout>
 
         <com.yhy.player.widget.SilenceTimeBar
                 android:id="@+id/stb_position"
