--- a/player/src/main/res/layout/widget_tv_player.xml
+++ b/player/src/main/res/layout/widget_tv_player.xml
@@ -8,6 +8,7 @@
 
     <com.google.android.exoplayer2.ui.StyledPlayerView
             android:id="@+id/spv_exo"
+            android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
