--- a/app/src/main/res/layout/dialog_select.xml
+++ b/app/src/main/res/layout/dialog_select.xml
@@ -24,13 +24,13 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:paddingBottom="@dimen/vs_20"
-                android:shadowColor="@color/color_FF000000"
+                android:shadowColor="@color/color_3D3D3D_50"
                 android:shadowDx="0"
                 android:shadowDy="0"
                 android:shadowRadius="5"
                 android:singleLine="true"
                 android:text="11111111"
-                android:textColor="@color/color_FFFFFF"
+                android:textColor="@color/color_32364E"
                 android:textSize="@dimen/ts_26"
                 android:textStyle="bold"
                 tools:text="Select Options" />
