--- a/app/src/main/res/drawable/button_dialog_vod.xml
+++ b/app/src/main/res/drawable/button_dialog_vod.xml
@@ -3,7 +3,7 @@
     <item android:state_focused="true" android:state_pressed="true">
         <shape>
             <corners android:radius="@dimen/vs_30" />
-            <solid android:color="?attr/color_theme_40" />
+            <solid android:color="@color/colorAccent" />
         </shape>
     </item>
     <item android:state_focused="false" android:state_pressed="true">
@@ -15,7 +15,7 @@
     <item android:state_focused="true">
         <shape>
             <corners android:radius="@dimen/vs_30" />
-            <solid android:color="?attr/color_theme_40" />
+            <solid android:color="@color/colorAccent" />
         </shape>
     </item>
     <item android:state_focused="false" android:state_pressed="false">
