--- a/app/src/main/res/values/ic_banner_background.xml
+++ b/app/src/main/res/values/ic_banner_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_background">#79CAA9</color>
+    <color name="ic_banner_background">#79CAA9</color>
 </resources>
